--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,7 @@
         <activity android:name=".NewGroupActivity" />
         <activity android:name=".MembersInGroupActivity" />
         <activity android:name=".NewMessageActivity"></activity>
+        <activity android:name=".NeedHelpActivity"></activity>
     </application>
 
 </manifest>
